Update the documentation formatting (#280)
* Update the documentation formatting

* Additional icons and formatting

* Change the variable format for consistency

* Minor updates to documentation

* Update INGRESS_NGINX.md

typo

* Update INSTALLATION.md

* Update PREREQUISITES.md

* Update MIGRATION.md

* Update PREREQUISITES.md

* Update links

Co-authored-by: tan-ro <73573449+tan-ro@users.noreply.github.com>

--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -30,6 +30,9 @@ plugins:
       htmlmin_opts:
         remove_comments: true
 markdown_extensions:
+  - pymdownx.emoji:
+      emoji_index: !!python/name:materialx.emoji.twemoji
+      emoji_generator: !!python/name:materialx.emoji.to_svg
   - pymdownx.highlight
   - pymdownx.inlinehilite
   - pymdownx.superfences
